k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: event-management
  namespace: event-management

spec:

  type: NodePort

  selector:
    app.kubernetes.io/name: event-management

  ports:

    - name: http
      protocol: TCP
      port: 5000
      targetPort: http
      nodePort: 30500
