k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: event-management-policy
  namespace: event-management

spec:

  podSelector:
    matchLabels:
      app.kubernetes.io/name: event-management

  policyTypes:
    - Ingress
    - Egress

  ingress:

    - from:
        - namespaceSelector: {}

      ports:
        - protocol: TCP
          port: 8084

  egress:

    - {}
